<resources>
    <string name="app_name">La Huella De Andrea</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="la_huella_de_andrea">La Huella de Andrea</string>
    <string name="registro2">Registrar</string>
    <string name="Nombre">Name</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bodyloveimg">TODO</string>
    <string name="correo">Correo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login2">Login</string>
    <string name="amigasimg">Amigas</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="motivacion">Motivacion</string>
    <string name="noticias">Noticias</string>
    <string name="historias">Historias</string>
    <string name="qanda">qanda</string>
    <string name="historiasfoto">historias</string>
    <string name="noticiasfoto">noticias</string>
    <string name="motivacionfoto">motivacion</string>
    <string name="logohomefoto">logohomefoto</string>
    <string name="nosotroshome">Nosotros</string>
</resources>