<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/qa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/motivacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/historias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/historia"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noticias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="209dp"
        android:layout_height="140dp"
        android:contentDescription="@string/qanda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/qaimg" />

    <ImageView
        android:id="@+id/historia"
        android:layout_width="201dp"
        android:layout_height="132dp"
        android:contentDescription="@string/historiasfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/histimg" />

    <ImageView
        android:id="@+id/Noticias"
        android:layout_width="206dp"
        android:layout_height="131dp"
        android:contentDescription="@string/noticiasfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/noticiasimg" />

    <ImageView
        android:id="@+id/motivacionfoto"
        android:layout_width="201dp"
        android:layout_height="139dp"
        android:contentDescription="@string/motivacionfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/motivimg" />

    <ImageView
        android:id="@+id/logohomefoto"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logohomefoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/nosotroshome"
        android:layout_width="182dp"
        android:layout_height="51dp"
        android:layout_marginBottom="12dp"
        android:text="@string/nosotroshome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>